fix issue with html and body elements not fitting page
- add group selector for both and move styles in
- make body flex
- think its sorted now

--- a/styles.css
+++ b/styles.css
@@ -52,14 +52,20 @@
 
 html {
     font-size: 16px;
-    width: 100vw;
-    height: 100vh;
     background: linear-gradient(45deg, rgb(174, 182, 228), rgb(247, 255, 222));
 }
 
-/* body {
-    
-} */
+html,body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+}
+
+body {
+    display: flex;
+}
 
 .bold {
     font-weight: bold;
